# pythonic

./: .gitignore  README.md  config.json  config.toml  genja.toml
.github/: FUNDING.yml
_templates/: index.html  post.html
code/: defaultdict_basics.py  list_basics.py  list_reverse.py  string_basics.py  tuple_basics.py  tuple_unpack.py
content/: flask-ajax.md  flask-bokeh-htmx.md  flask-bokeh.md  flask-form-htmx.md  flask-form-input.md  flask-plotly-htmx.md  flask-plotly-restyle.md  flask-plotly.md
docs/: Gemfile  README.md  _config.yml  feed.json  index.html  robots.txt  rss.xml  search_index.en.js  sitemap.xml  style.css  styles.css  syntax.css  template.html
docs-new/: flask-ajax.html  flask-bokeh-htmx.html  flask-bokeh.html  flask-form-htmx.html  flask-form-input.html  flask-heroku.html  flask-plotly-htmx.html  flask-plotly-restyle.html  flask-plotly.html  index.html  style.css  template.html
examples/: dask_array_1.py  dask_array_2.py  matplotlib_mosaic.py  prealloc_list.py  streamlit-selectbox.py  tkinter_app.py  tkinter_matplotlib.py  tkinter_openjsonfile.py
projects/pyzmq-client-server-test/: pyproject.toml  server.py  test_client.py  test_server.py
projects/quart-httpx/: pyproject.toml
projects/quart-httpx/src/quart_httpx/: __init__.py  config.py  http_client.py  main.py
projects/quart-httpx/tests/: conftest.py  test_config.py  test_http_client.py  test_main.py  test_root.py  test_sample.py
projects/streamlit-pkg/: pyproject.toml
projects/streamlit-pkg/src/stpkg/: __init__.py  adder.py  app.py  cli.py
projects/streamlit-pkg/tests/: test_adder.py
projects/test-config/: example.py  pyproject.toml
projects/test-config/src/mypkg/: __init__.py  config.py  downloader.py
projects/test-config/tests/: test_config.py  test_downloader.py
python-scripts/: cached.py  dask_script.py  ray_actor.py  sqlalchemy_usage.py  text_dedent.py  tkinter_customtkinter.py
scripts/: argparse_cli.py  cache_function.py  cached_class_property.py  count_letters.py  fizzbuzz.py  matplotlib_bar.py  matplotlib_imshow.py  matplotlib_matshow.py  numpy_gauss2d.py  numpy_index_max.py  numpy_inv_solve.py  ray_function.py  sorted_list.py  tkinter_basicapp.py  tkinter_label.py  (+1 more)
(+699 files in other folders)
