[project]
name = "quart-httpx"
version = "0.1"
requires-python = ">=3.13"
dependencies = [
    "httpx>=0.28.1",
    "quart>=0.20.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.14.10",
]

[build-system]
requires = ["uv_build>=0.8.11,<0.9.0"]
build-backend = "uv_build"
