[build-system]
requires = ["uv_build>=0.8.11,<0.9.0"]
build-backend = "uv_build"

[project]
name = "stpkg"
version = "0.1.0"
description = "Streamlit app in a package"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "streamlit>=1.48.1",
]

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "ruff>=0.12.9",
]

[project.scripts]
stpkg = "stpkg.cli:main"

[tool.basedpyright]
typeCheckingMode = "standard"
